# aess

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  app.py  dependencies.py  models.py  pyproject.toml  utils.py
backend/docker/: start.sh
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/new/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/reports/: display-essay.tsx  display-reports-with-score.tsx  page.tsx  progress-bar-circle.tsx  report-section-card.tsx  score-card.tsx  view-feedback.tsx  view-metrics.tsx  view-statistics.tsx  view-suggestions.tsx
frontend/src/components/: user-auth-form.tsx  user-login-form.tsx
frontend/src/firebase/: index.ts
frontend/src/lib/: api.ts  types.ts
